fix header padding heigth on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -12,18 +12,10 @@
 
 /*Header*/
 
-@media (min-width: 991px) {
-    /*576 - 767*/
+@media (min-width: 767px) {
     .navbar {
-        padding-top: 0 !important;
-        padding-bottom: 0 !important;
-    }
-}
-
-@media (max-width: 991px) {
-    .navbar {
-        padding-top: 0 !important;
-        padding-bottom: 0 !important;
+        padding-top: 0px !important;
+        padding-bottom: 0px !important;
     }
 }
 
